...
    final userData = widget.userData;

    return Scaffold(
      appBar: AppBar(
        title: const Center(
          child: Text(
            'Confirmação de Cadastro',
            style: TextStyle(
              fontFamily: 'Inter',
              fontSize: 14,
              fontWeight: FontWeight.w300,
            ),
          ),
...
                      'Número do documento: ', userData.documentNumber),
                  _buildDataTile('Gênero: ', userData.gender),
                  _buildDataTile('Número do telefone: ', userData.phoneNumber),
                  _buildDataTile('Email: ', userData.email),
                  const SizedBox(height: 20),
                  ButtonWidget(
                    nameButton: 'Confirmar',
                    onPressed: () {
                      _showRegistrationConfirmation(context);
                    },
                  )
                ],
              ),
...
