...
                    child: Padding(
                      padding:
                          const EdgeInsets.only(left: 19, top: 50, right: 19),
                      child: Column(
                        crossAxisAlignment: CrossAxisAlignment.start,
                        children: [
                          const Text('Olá!',
                              style: TextStyle(
                                fontSize: 20,
                                fontWeight: FontWeight.w900,
                                fontFamily: 'Inter',
                                color: AppColors.green,
                              )),
...
                                      onPressed: () =>
                                          controller.navigateToProfile(context),
                                    ),
                                    const SizedBox(height: 20),
                                    TextButton(
                                      child: const Text(
                                        'AINDA NÃO TENHO CADASTRO',
                                        style: TextStyle(
                                          fontSize: 14,
                                          fontFamily: 'Inter',
                                          fontWeight: FontWeight.w600,
                                          color: AppColors.darkLeafGreen,
                                        ),
...
